@@ -3,7 +3,7 @@
 
   "name": "F! Companion Dev",
   "description": "F! Companion lets you download all pages of a manga at once or just view the links to them.",
-  "version": "0.4.0.20",
+  "version": "0.4.0.21",
   "icons": { "256": "images/icon-256.png"},
   "options_page": "Options.html",
   "background": { "scripts": ["scripts/background.js", "scripts/jquery-2.1.3.min.js"] },
@@ -13,7 +13,8 @@
 	"tabs", 
   "downloads", 
   "cookies", 
-  "https://www.fakku.net/*"
+  "https://www.fakku.net/*",
+  "https://raw.githubusercontent.com/*"
   ],
 
   "browser_action": {
